body color not showing fix try#1

--- a/css/styles.css
+++ b/css/styles.css
@@ -920,7 +920,7 @@ button:focus,
 
 body {
   position: relative;
-  z-index: -1;
+  z-index: 1;
   /*placed behind the profile picture to be able to click that*/
 }
 
@@ -1036,7 +1036,7 @@ h1 {
 
 body{
   position: relative;
-  z-index: -111;
+  z-index: 1;
 }
 
   #menu-toggle {
